13. To be honest I am not quite sure with the task "Make sure that the header image stretches to fix the containing div", so I only add `background-size: cover;` to make it streched correctly and also for responsive purpose.

--- a/less/clean-blog.scss
+++ b/less/clean-blog.scss
@@ -168,6 +168,7 @@ hr.small {
 	background-color: $gray;
 	background: no-repeat center center;
 	background-attachment: scroll;
+	background-size: cover;
 	// NOTE: Background images are set within the HTML using inline CSS!
 	margin-bottom: 50px;
 	padding: 116px 0;
